--- a/public/admin/comments.html
+++ b/public/admin/comments.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Comments &laquo; Admin</title>
   <link rel="stylesheet" href="../assets/vendors/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="../assets/vendors/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="../assets/css/admin.css">
+  <link rel="stylesheet" href="../assets/vendors/nprogress/nprogress.css">
+  <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
+
 <body>
+  <script>
+    NProgress.start();
+  </script>
   <div class="main">
     <nav class="navbar">
       <button class="btn btn-default navbar-btn fa fa-bars"></button>
@@ -21,12 +28,8 @@
         <h1>所有评论</h1>
       </div>
       <div class="page-action">
-        <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+        <ul class="pagination pagination-sm pull-right" id="pageBox">
+          <!-- 分页 -->
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -40,40 +43,8 @@
             <th class="text-center" width="100">操作</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>大大</td>
-            <td>楼主好人，顶一个</td>
-            <td>《Hello world》</td>
-            <td>2026/10/07</td>
-            <td>未批准</td>
-            <td class="text-center">
-              <a href="post-add.html" class="btn btn-info btn-xs">批准</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>大大</td>
-            <td>楼主好人，顶一个</td>
-            <td>《Hello world》</td>
-            <td>2026/10/07</td>
-            <td>已批准</td>
-            <td class="text-center">
-              <a href="post-add.html" class="btn btn-warning btn-xs">驳回</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
-          <tr>
-            <td>大大</td>
-            <td>楼主好人，顶一个</td>
-            <td>《Hello world》</td>
-            <td>2026/10/07</td>
-            <td>已批准</td>
-            <td class="text-center">
-              <a href="post-add.html" class="btn btn-warning btn-xs">驳回</a>
-              <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-            </td>
-          </tr>
+        <tbody id="commentsBox">
+
         </tbody>
       </table>
     </div>
@@ -119,5 +90,44 @@
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/vendors/art-template/template-web.js"></script>
+  <!-- 评论列表模板 -->
+  <script type="text/html" id="commentsTpl">
+    {{each records}}
+    <tr>
+      <td>{{$value.author.nickName}}</td>
+      <td>{{$value.content}}</td>
+      <td>{{$value.post.title}}</td>
+      <td>{{$imports.dateFormat($value.createAt)}}</td>
+      <td>{{$value.state == 0 ? '未批准' : '批准'}}</td>
+      <td class="text-center" data-id="{{$value._id}}" data-status="{{$value.state}}">
+        {{if $value.state == 0}}
+        <a href="javascript:;" class="btn btn-info btn-xs status">批准</a>
+        {{else}}
+        <a href="javascript:;" class="btn btn-warning btn-xs status">驳回</a>
+        {{/if}}
+        <a href="javascript:;" class="btn btn-danger btn-xs delete">删除</a>
+      </td>
+    </tr>
+    {{/each}}
+  </script>
+  <!-- 分页模板 -->
+  <script type="text/html" id="pageTpl">
+    {{if page > 1}}
+    <li><a href="javascript:;" onclick="changePage({{page - 1}})">上一页</a></li>
+    {{/if}}
+    {{each display}}
+    <li class="{{$value == page ? 'active' : ''}}">
+      <a href="javascript:;" onclick="changePage({{$value}})">{{$value}}</a>
+    </li>
+    {{/each}}
+    {{if page < pages}}
+    <li><a href="javascript:;" onclick="changePage({{page + 1}})">下一页</a></li>
+    {{/if}}
+  </script>
+  <script src="../assets/js/comments.js"></script>
+  <script>
+    NProgress.done()
+  </script>
 </body>
+
 </html>
