--- a/public/admin/posts.html
+++ b/public/admin/posts.html
@@ -13,7 +13,7 @@
 
 <body>
   <script>
-    NProgress.start();
+    NProgress.done()
   </script>
   <div class="main">
     <nav class="navbar">
@@ -32,19 +32,18 @@
         <!-- show when multiple checked -->
         <a class="btn btn-danger btn-sm" href="javascript:;" style="display: none">批量删除</a>
         <form class="form-inline" id="filterForm">
-          <select name="category" class="form-control input-sm" id="categoryBox"></select>
+          <select name="category" class="form-control input-sm" id="categoryBox">
+            <!-- <option value="">所有分类</option> -->
+          </select>
           <select name="state" class="form-control input-sm">
+            <!-- <option value="">所有状态</option> -->
             <option value="0">草稿</option>
             <option value="1">已发布</option>
           </select>
           <button class="btn btn-default btn-sm">筛选</button>
         </form>
-        <ul class="pagination pagination-sm pull-right">
-          <li><a href="#">上一页</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">下一页</a></li>
+        <ul class="pagination pagination-sm pull-right" id="page">
+
         </ul>
       </div>
       <table class="table table-striped table-bordered table-hover">
@@ -101,7 +100,6 @@
       </li>
     </ul>
   </div>
-
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/vendors/art-template/template-web.js"></script>
@@ -119,6 +117,27 @@
         <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
       </td>
     </tr>
+    {{/each}}
+  </script>
+  <!-- 分页模板 -->
+  <script type="text/html" id="pageTpl">
+    {{if page > 1}}
+    <li><a href="javascript:;" onclick="changePage({{page - 1}})">上一页</a></li>
+    {{/if}}
+    {{each display}}
+    <!-- changePage一定要是全局的 不然接收不到 -->
+    <li class="{{$value == page ? 'active' : ''}}">
+      <a href="javascript:;" onclick="changePage({{$value}})">{{$value}}</a>
+    </li>
+    {{/each}}
+    {{if page < pages}}
+    <li><a href="javascript:;" onclick="changePage({{page + 1}})">下一页</a></li>
+    {{/if}}
+  </script>
+  <!-- 分类列表下拉框模板 -->
+  <script type="text/html" id="categoryTpl">
+    {{each data}}
+    <option value="{{$value._id}}">{{$value.title}}</option>
     {{/each}}
   </script>
   <script src="../assets/js/posts.js"></script>
