--- a/public/admin/slides.html
+++ b/public/admin/slides.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
   <meta charset="utf-8">
   <title>Slides &laquo; Admin</title>
   <link rel="stylesheet" href="../assets/vendors/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="../assets/vendors/font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="../assets/css/admin.css">
+  <link rel="stylesheet" href="../assets/vendors/nprogress/nprogress.css">
+  <script src="../assets/vendors/nprogress/nprogress.js"></script>
 </head>
-<body>
 
+<body>
+  <script>
+    NProgress.start();
+  </script>
   <div class="main">
     <nav class="navbar">
       <button class="btn btn-default navbar-btn fa fa-bars"></button>
@@ -34,6 +40,7 @@
               <!-- show when image chose -->
               <img class="help-block thumbnail" style="display: none">
               <input id="file" class="form-control" type="file">
+              <input type="hidden" name="image" id="hiddenImage">
             </div>
             <div class="form-group">
               <label for="text">文本</label>
@@ -58,23 +65,9 @@
                 <th class="text-center" width="100">操作</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <td class="text-center"><img class="slide" src="../uploads/slide_1.jpg"></td>
-                <td>XIU功能演示</td>
-                <td>#</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
-              <tr>
-                <td class="text-center"><img class="slide" src="../uploads/slide_2.jpg"></td>
-                <td>XIU功能演示</td>
-                <td>#</td>
-                <td class="text-center">
-                  <a href="javascript:;" class="btn btn-danger btn-xs">删除</a>
-                </td>
-              </tr>
+            <tbody id="slidesBox">
+
+
             </tbody>
           </table>
         </div>
@@ -122,5 +115,25 @@
   <script src="../assets/vendors/jquery/jquery.js"></script>
   <script src="../assets/vendors/bootstrap/js/bootstrap.js"></script>
   <script src="../assets/vendors/art-template/template-web.js"></script>
+  <!-- 轮播图列表模板 -->
+  <script type="text/html" id="slidesTpl">
+    {{each data}}
+    <tr>
+      <td class="text-center">
+        <img class="slide" src="{{$value.image}}">
+      </td>
+      <td>{{$value.title}}</td>
+      <td>{{$value.link}}</td>
+      <td class="text-center">
+        <a href="javascript:;" class="btn btn-danger btn-xs delete" data-id="{{$value._id}}">删除</a>
+      </td>
+    </tr>
+    {{/each}}
+  </script>
+  <script src="../assets/js/slides.js"></script>
+  <script>
+    NProgress.done()
+  </script>
 </body>
+
 </html>
